--- a/spyfall/i18n/zh.i18n.json
+++ b/spyfall/i18n/zh.i18n.json
@@ -1,311 +1,311 @@
 {
     "ui": {
-        "welcome to spyfall": "歡迎來到《Spyfall間諜危機》",
-        "new game": "開始新遊戲",
-        "join game": "加入遊戲",
+        "welcome to spyfall": "欢迎来到《Spyfall间谍危机》",
+        "new game": "开始新游戏",
+        "join game": "加入游戏",
         "waiting for players": "等待其他玩家...",
-        "access code": "通行號碼",
-        "join my spyfall game": "加入我的《Spyfall間諜危機》遊戲！",
-        "start game": "開始遊戲",
-        "leave game": "離開遊戲",
-        "show hide": "檢視/隱藏",
-        "you are the spy": "你是間諜！",
-        "you are not the spy": "你<strong>不是</strong>間諜！",
-        "the location": "地點",
+        "access code": "通行号码",
+        "join my spyfall game": "加入我的《Spyfall间谍危机》游戏！",
+        "start game": "开始游戏",
+        "leave game": "离开游戏",
+        "show hide": "检视/隐藏",
+        "you are the spy": "你是间谍！",
+        "you are not the spy": "你<strong>不是</strong>间谍！",
+        "the location": "地点",
         "your role": "你的角色",
         "players": "玩家",
         "first": "首家",
-        "location reference": "地點參考",
-        "end game": "遊戲結束",
-        "enter your name": "輸入你的名字",
-        "create game": "創建",
+        "location reference": "地点参考",
+        "end game": "游戏结束",
+        "enter your name": "输入你的名字",
+        "create game": "创建",
         "back": "回去",
-        "enter an access code": "輸入通行號碼",
-        "invalid access code": "無效的通行號碼",
+        "enter an access code": "输入通行号码",
+        "invalid access code": "无效的通行号码",
         "join": "加入",
-        "footer": "<a href='http://international.hobbyworld.ru/catalog/25-spyfall/' target='_blank'>《Spyfall間諜危機》</a> 由Alexandr Ushan設計， <a href='http://international.hobbyworld.ru/' target='_blank'>Hobby World公司出版</a>。"
+        "footer": "<a href='http://international.hobbyworld.ru/catalog/25-spyfall/' target='_blank'>《Spyfall间谍危机》</a> 由Alexandr Ushan设计， <a href='http://international.hobbyworld.ru/' target='_blank'>Hobby World公司出版</a>。"
     },
     "locations": {
-        "airplane": "民航機",
-        "bank": "銀行",
-        "beach": "海灘",
+        "airplane": "民航机",
+        "bank": "银行",
+        "beach": "海滩",
         "cathedral": "大教堂",
-        "circus tent": "馬戲團",
-        "corporate party": "企業派對",
-        "crusader army": "十字軍東征",
-        "casino": "賭場",
+        "circus tent": "马戏团",
+        "corporate party": "企业派对",
+        "crusader army": "十字军东征",
+        "casino": "赌场",
         "day spa": "日光浴Spa",
-        "embassy": "大使館",
-        "hospital": "醫院",
-        "hotel": "旅館",
-        "military base": "軍事基地",
-        "movie studio": "攝影棚",
-        "ocean liner": "度假郵輪",
-        "passenger train": "載客火車",
-        "pirate ship": "海盜船",
-        "polar station": "極地哨站",
+        "embassy": "大使馆",
+        "hospital": "医院",
+        "hotel": "旅馆",
+        "military base": "军事基地",
+        "movie studio": "摄影棚",
+        "ocean liner": "度假邮轮",
+        "passenger train": "载客火车",
+        "pirate ship": "海盗船",
+        "polar station": "极地哨站",
         "police station": "警察局",
-        "restaurant": "餐廳",
-        "school": "學校",
-        "service station": "修車廠",
+        "restaurant": "餐厅",
+        "school": "学校",
+        "service station": "修车厂",
         "space station": "太空站",
-        "submarine": "潛水艇",
-        "supermarket": "超級市場",
-        "theater": "歌劇院",
-        "university": "大學",
-        "world war ii squad": "二次大戰中隊",
+        "submarine": "潜水艇",
+        "supermarket": "超级市场",
+        "theater": "歌剧院",
+        "university": "大学",
+        "world war ii squad": "二次大战中队",
         "roles": {
             "airplane": {
-                "first class passenger": "頭等艙乘客",
+                "first class passenger": "头等舱乘客",
                 "air marshall": "航空警察",
-                "mechanic": "飛機技工",
-                "air hostess": "空服員",
-                "copilot": "副駕駛",
-                "captain": "正駕駛",
-                "economy class passenger": "經濟艙乘客"
+                "mechanic": "飞机技工",
+                "air hostess": "空服员",
+                "copilot": "副驾驶",
+                "captain": "正驾驶",
+                "economy class passenger": "经济舱乘客"
             },
             "bank": {
-                "armored car driver": "裝甲車駕駛員",
-                "manager": "銀行經理",
-                "consultant": "投資顧問",
-                "robber": "搶匪",
+                "armored car driver": "装甲车驾驶员",
+                "manager": "银行经理",
+                "consultant": "投资顾问",
+                "robber": "抢匪",
                 "security guard": "保全",
-                "teller": "櫃台行員",
-                "customer": "顧客"
+                "teller": "柜台行员",
+                "customer": "顾客"
             },
             "beach": {
-                "beach waitress": "海灘服務員",
-                "kite surfer": "放風箏者",
-                "lifeguard": "救生員",
+                "beach waitress": "海滩服务员",
+                "kite surfer": "放风筝者",
+                "lifeguard": "救生员",
                 "thief": "小偷",
-                "beach photographer": "海灘攝影者",
-                "ice cream truck driver": "冰淇淋車駕駛員",
-                "beach goer": "海灘遊客"
+                "beach photographer": "海滩摄影者",
+                "ice cream truck driver": "冰淇淋车驾驶员",
+                "beach goer": "海滩游客"
             },
             "cathedral": {
-                "priest": "牧師",
+                "priest": "牧师",
                 "beggar": "乞丐",
-                "sinner": "贖罪者",
-                "tourist": "遊客",
-                "sponsor": "教會贊助者",
-                "chorister": "唱詩班",
+                "sinner": "赎罪者",
+                "tourist": "游客",
+                "sponsor": "教会赞助者",
+                "chorister": "唱诗班",
                 "parishioner": "教友"
             },
             "circus tent": {
-                "acrobat": "雜技演員",
-                "animal trainer": "動物訓練師",
-                "magician": "魔術師",
+                "acrobat": "杂技演员",
+                "animal trainer": "动物训练师",
+                "magician": "魔术师",
                 "fire eater": "吞火表演者",
                 "clown": "小丑",
-                "juggler": "丟球表演者",
-                "visitor": "觀眾"
+                "juggler": "丢球表演者",
+                "visitor": "观众"
             },
             "corporate party": {
-                "entertainer": "派對表演者",
-                "manager": "企業經理",
+                "entertainer": "派对表演者",
+                "manager": "企业经理",
                 "unwanted guest": "不速之客",
-                "owner": "企業主",
-                "secretary": "秘書",
-                "delivery boy": "外送員",
-                "accountant": "會計"
+                "owner": "企业主",
+                "secretary": "秘书",
+                "delivery boy": "外送员",
+                "accountant": "会计"
             },
             "crusader army": {
                 "monk": "武僧",
-                "imprisoned saracen": "異教徒囚犯",
-                "servant": "僕人",
+                "imprisoned saracen": "异教徒囚犯",
+                "servant": "仆人",
                 "bishop": "主教",
-                "squire": "護衛",
+                "squire": "护卫",
                 "archer": "弓箭手",
-                "knight": "騎士"
+                "knight": "骑士"
             },
             "casino": {
-                "bartender": "調酒師",
+                "bartender": "调酒师",
                 "head security guard": "保全主管",
-                "bouncer": "保鑣",
-                "manager": "經理",
-                "hustler": "拉皮條",
-                "dealer": "莊家",
-                "gambler": "賭客"
+                "bouncer": "保镳",
+                "manager": "经理",
+                "hustler": "拉皮条",
+                "dealer": "庄家",
+                "gambler": "赌客"
             },
             "day spa": {
-                "stylist": "美容師",
-                "masseuse": "按摩師",
-                "manicurist": "指甲美容師",
-                "makeup artist": "化妝師",
-                "dermatologist": "皮膚科醫師",
-                "beautician": "彩妝師",
-                "customer": "顧客"
+                "stylist": "美容师",
+                "masseuse": "按摩师",
+                "manicurist": "指甲美容师",
+                "makeup artist": "化妆师",
+                "dermatologist": "皮肤科医师",
+                "beautician": "彩妆师",
+                "customer": "顾客"
             },
             "embassy": {
                 "security guard": "保全",
-                "secretary": "秘書",
+                "secretary": "秘书",
                 "ambassador": "大使",
-                "tourist": "遊客",
-                "refugee": "難民",
+                "tourist": "游客",
+                "refugee": "难民",
                 "diplomat": "外交官",
-                "government official": "政府官員"
+                "government official": "政府官员"
             },
             "hospital": {
-                "nurse": "護士",
-                "doctor": "醫師",
-                "anesthesiologist": "麻醉師",
-                "intern": "實習醫師",
-                "therapist": "心理諮詢師",
-                "surgeon": "外科醫師",
+                "nurse": "护士",
+                "doctor": "医师",
+                "anesthesiologist": "麻醉师",
+                "intern": "实习医师",
+                "therapist": "心理咨询师",
+                "surgeon": "外科医师",
                 "patient": "病人"
             },
             "hotel": {
-                "doorman": "門房",
+                "doorman": "门房",
                 "security guard": "保全",
-                "manager": "經理",
-                "housekeeper": "打掃阿姨",
-                "bartender": "調酒師",
-                "bellman": "迎賓原",
-                "customer": "顧客"
+                "manager": "经理",
+                "housekeeper": "打扫阿姨",
+                "bartender": "调酒师",
+                "bellman": "迎宾原",
+                "customer": "顾客"
             },
             "military base": {
-                "deserter": "離營者",
+                "deserter": "离营者",
                 "colonel": "上校",
-                "medic": "醫官",
-                "sniper": "狙擊手",
+                "medic": "医官",
+                "sniper": "狙击手",
                 "officer": "行政官",
-                "tank engineer": "坦克技師",
-                "soldier": "軍人"
+                "tank engineer": "坦克技师",
+                "soldier": "军人"
             },
             "movie studio": {
                 "stunt man": "武打替身",
-                "sound engineer": "聲控師",
-                "camera man": "攝影師",
-                "director": "導演",
-                "costume artist": "化妝師",
-                "producer": "製作人",
-                "actor": "演員"
+                "sound engineer": "声控师",
+                "camera man": "摄影师",
+                "director": "导演",
+                "costume artist": "化妆师",
+                "producer": "制作人",
+                "actor": "演员"
             },
             "ocean liner": {
-                "cook": "廚師",
-                "captain": "船長",
-                "bartender": "調酒師",
-                "musician": "音樂家",
-                "waiter": "服務生",
-                "mechanic": "技師",
-                "rich passenger": "高級顧客"
+                "cook": "厨师",
+                "captain": "船长",
+                "bartender": "调酒师",
+                "musician": "音乐家",
+                "waiter": "服务生",
+                "mechanic": "技师",
+                "rich passenger": "高级顾客"
             },
             "passenger train": {
-                "mechanic": "火車技師",
+                "mechanic": "火车技师",
                 "border patrol": "境管局巡守",
-                "train attendant": "火車服務員",
-                "restaurant chef": "餐廳大廚",
-                "train driver": "火車駕駛",
-                "stoker": "火車司爐",
+                "train attendant": "火车服务员",
+                "restaurant chef": "餐厅大厨",
+                "train driver": "火车驾驶",
+                "stoker": "火车司炉",
                 "passenger": "乘客"
             },
             "pirate ship": {
-                "cook": "廚師",
-                "slave": "奴隸",
-                "cannoneer": "砲手",
+                "cook": "厨师",
+                "slave": "奴隶",
+                "cannoneer": "炮手",
                 "tied up prisoner": "囚犯",
                 "cabin boy": "小跟班",
-                "brave captain": "勇敢的船長",
+                "brave captain": "勇敢的船长",
                 "sailor": "水手"
             },
             "polar station": {
-                "medic": "醫師",
-                "expedition leader": "探險隊隊長",
-                "biologist": "生物學家",
-                "radioman": "通訊關",
-                "hydrologist": "水利工程師",
-                "meteorologist": "氣象學家",
-                "geologist": "地理學家"
+                "medic": "医师",
+                "expedition leader": "探险队队长",
+                "biologist": "生物学家",
+                "radioman": "通讯关",
+                "hydrologist": "水利工程师",
+                "meteorologist": "气象学家",
+                "geologist": "地理学家"
             },
             "police station": {
                 "detective": "警探",
-                "lawyer": "律師",
-                "journalist": "記者",
-                "criminalist": "犯罪學家",
-                "archivist": "檔案管理員",
+                "lawyer": "律师",
+                "journalist": "记者",
+                "criminalist": "犯罪学家",
+                "archivist": "文件管理器",
                 "criminal": "犯人",
-                "patrol officer": "巡邏警察"
+                "patrol officer": "巡逻警察"
             },
             "restaurant": {
-                "musician": "音樂表演者",
-                "bouncer": "保鑣",
-                "hostess": "女老闆",
-                "head chef": "大廚",
-                "food critic": "食物評論家",
-                "waiter": "服務生",
-                "customer": "顧客"
+                "musician": "音乐表演者",
+                "bouncer": "保镳",
+                "hostess": "女老板",
+                "head chef": "大厨",
+                "food critic": "食物评论家",
+                "waiter": "服务生",
+                "customer": "顾客"
             },
             "school": {
-                "gym teacher": "體育老師",
-                "principal": "校長",
+                "gym teacher": "体育老师",
+                "principal": "校长",
                 "security guard": "保全",
-                "janitor": "清潔隊",
-                "cafeteria lady": "學校餐廳阿姨",
-                "maintenance man": "總務",
-                "student": "學生"
+                "janitor": "清洁队",
+                "cafeteria lady": "学校餐厅阿姨",
+                "maintenance man": "总务",
+                "student": "学生"
             },
             "service station": {
-                "manager": "經理",
-                "tire specialist": "輪胎技工",
-                "biker": "單車手",
-                "car owner": "車主",
-                "car wash operator": "洗車操作員",
-                "electrician": "墊子技師",
-                "auto mechanic": "汽車技工"
+                "manager": "经理",
+                "tire specialist": "轮胎技工",
+                "biker": "单车手",
+                "car owner": "车主",
+                "car wash operator": "洗车操作员",
+                "electrician": "垫子技师",
+                "auto mechanic": "汽车技工"
             },
             "space station": {
-                "engineer": "工程師",
+                "engineer": "工程师",
                 "alien": "外星人",
-                "pilot": "駕駛員",
-                "commander": "指揮官",
-                "scientist": "科學家",
-                "doctor": " 醫師",
+                "pilot": "驾驶员",
+                "commander": "指挥官",
+                "scientist": "科学家",
+                "doctor": " 医师",
                 "space tourist": "太空旅客"
             },
             "submarine": {
-                "cook": "廚師",
-                "commander": "指揮官",
-                "sonar technician": "聲納技工",
-                "electronics technician": "電子工程師",
-                "radioman": "通訊官",
-                "navigator": "導航員",
-                "sailor": "船員"
+                "cook": "厨师",
+                "commander": "指挥官",
+                "sonar technician": "声纳技工",
+                "electronics technician": "电子工程师",
+                "radioman": "通讯官",
+                "navigator": "导航员",
+                "sailor": "船员"
             },
             "supermarket": {
-                "cashier": "結帳員",
+                "cashier": "结账员",
                 "butcher": "屠夫",
-                "janitor": "清潔隊",
+                "janitor": "清洁队",
                 "security guard": "保全",
-                "food sample demonstrator": "食物展示銷售員",
-                "shelf stocker": "上貨上架員",
-                "customer": "顧客"
+                "food sample demonstrator": "食物展示销售员",
+                "shelf stocker": "上货上架员",
+                "customer": "顾客"
             },
             "theater": {
-                "coat check lady": "迎賓服務員",
-                "prompter": "大字報操作員",
-                "cashier": "收銀員",
-                "director": "導演",
-                "actor": "演員",
-                "crew man": "工作人員",
-                "audience member": "觀眾"
+                "coat check lady": "迎宾服务员",
+                "prompter": "大字报操作员",
+                "cashier": "收银员",
+                "director": "导演",
+                "actor": "演员",
+                "crew man": "工作人员",
+                "audience member": "观众"
             },
             "university": {
                 "graduate student": "研究生",
                 "professor": "教授",
-                "dean": "校間",
-                "psychologist": "心理諮詢師",
-                "maintenance man": "總務",
-                "janitor": "清潔隊",
-                "student": "學生"
+                "dean": "校间",
+                "psychologist": "心理咨询师",
+                "maintenance man": "总务",
+                "janitor": "清洁队",
+                "student": "学生"
             },
             "world war ii squad": {
-                "resistance fighter": "反抗鬥士",
-                "radioman": "通訊官",
+                "resistance fighter": "反抗斗士",
+                "radioman": "通讯官",
                 "scout": "前哨",
-                "medic": "醫官",
-                "cook": "廚師",
-                "imprisoned nazi": "納粹囚犯",
-                "soldier": "軍人"
+                "medic": "医官",
+                "cook": "厨师",
+                "imprisoned nazi": "纳粹囚犯",
+                "soldier": "军人"
             }
         }
     }
